--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vinylbazar",
   "version": "0.0.1",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/MikulasMascautanu/vinylbazar#readme",
   "dependencies": {
-    "axios": "^0.26.1"
+    "axios": "^0.26.1",
+    "node-html-parser": "^5.3.3"
   }
 }
