--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/MikulasMascautanu/vinylbazar#readme",
   "dependencies": {
     "axios": "^0.26.1",
+    "dotenv": "^16.0.1",
+    "googleapis": "^105.0.0",
     "node-html-parser": "^5.3.3"
   }
 }
